--- a/src/components/Badge/badge.css
+++ b/src/components/Badge/badge.css
@@ -1,101 +1,101 @@
 :host {
   /* NEW in 2.0 */
-  --badge-padding-x: 0.571em;
-  --badge-padding-y: 0.285em;
-  --badge-font-size:  min(0.875em, 5rem);
-  --badge-font-weight: 700;
-  --badge-color: #fff;
-  --badge-border-radius: var(--sgds-border-radius);
-  --badge-line-height: 1.145;
-  --badge-background-color: ;
-  --badge-border-color: ;
+  --sgds-badge-padding-x: 0.571em;
+  --sgds-badge-padding-y: 0.285em;
+  --sgds-badge-font-size:  min(0.875em, 5rem);
+  --sgds-badge-font-weight: 700;
+  --sgds-badge-color: #fff;
+  --sgds-badge-border-radius: var(--sgds-border-radius);
+  --sgds-badge-line-height: 1.145;
+  --sgds-badge-background-color: ;
+  --sgds-badge-border-color: ;
 }
 
 :host([variant="primary"]) {
-  --badge-background-color: var(--sgds-primary-filled);
-  --badge-border-color: var(--sgds-primary-filled);
+  --sgds-badge-background-color: var(--sgds-primary-filled);
+  --sgds-badge-border-color: var(--sgds-primary-filled);
 }
 :host([variant="secondary"]) {
-  --badge-background-color: var(--sgds-secondary-filled);
-  --badge-border-color: var(--sgds-secondary-filled);
+  --sgds-badge-background-color: var(--sgds-secondary-filled);
+  --sgds-badge-border-color: var(--sgds-secondary-filled);
 }
 :host([variant="warning"]) {
-  --badge-background-color: var(--sgds-warning-filled);
-  --badge-border-color: var(--sgds-warning-filled);
+  --sgds-badge-background-color: var(--sgds-warning-filled);
+  --sgds-badge-border-color: var(--sgds-warning-filled);
 }
 :host([variant="danger"]) {
-  --badge-background-color: var(--sgds-danger-filled);
-  --badge-border-color: var(--sgds-danger-filled);
+  --sgds-badge-background-color: var(--sgds-danger-filled);
+  --sgds-badge-border-color: var(--sgds-danger-filled);
 }
 :host([variant="success"]) {
-  --badge-background-color: var(--sgds-success-filled);
-  --badge-border-color: var(--sgds-success-filled);
+  --sgds-badge-background-color: var(--sgds-success-filled);
+  --sgds-badge-border-color: var(--sgds-success-filled);
 }
 :host([variant="info"]) {
-  --badge-background-color: var(--sgds-info-filled);
-  --badge-border-color: var(--sgds-info-filled);
+  --sgds-badge-background-color: var(--sgds-info-filled);
+  --sgds-badge-border-color: var(--sgds-info-filled);
 }
 :host([variant="light"]) {
-  --badge-background-color: var(--sgds-light-filled);
-  --badge-border-color: var(--sgds-light-filled);
-  --badge-color: var(--sgds-dark)
+  --sgds-badge-background-color: var(--sgds-light-filled);
+  --sgds-badge-border-color: var(--sgds-light-filled);
+  --sgds-badge-color: var(--sgds-dark)
 }
 :host([variant="dark"]) {
-  --badge-background-color: var(--sgds-dark-filled);
-  --badge-border-color: var(--sgds-dark-filled);
+  --sgds-badge-background-color: var(--sgds-dark-filled);
+  --sgds-badge-border-color: var(--sgds-dark-filled);
 }
 :host([variant="primary"][outlined]) {
-  --badge-color: var(--sgds-primary-text-emphasis);
-  --badge-background-color: var(--sgds-primary-bg-subtle);
-  --badge-border-color: var(--sgds-primary-border-subtle);
+  --sgds-badge-color: var(--sgds-primary-text-emphasis);
+  --sgds-badge-background-color: var(--sgds-primary-bg-subtle);
+  --sgds-badge-border-color: var(--sgds-primary-border-subtle);
 
 }
 :host([variant="secondary"][outlined]) {
-  --badge-color: var(--sgds-secondary-text-emphasis);
-  --badge-background-color: var(--sgds-secondary-bg-subtle);
-  --badge-border-color: var(--sgds-secondary-border-subtle);
+  --sgds-badge-color: var(--sgds-secondary-text-emphasis);
+  --sgds-badge-background-color: var(--sgds-secondary-bg-subtle);
+  --sgds-badge-border-color: var(--sgds-secondary-border-subtle);
 }
 :host([variant="warning"][outlined]) {
-  --badge-color: var(--sgds-warning-text-emphasis);
-  --badge-background-color: var(--sgds-warning-bg-subtle);
-  --badge-border-color: var(--sgds-warning-border-subtle);
+  --sgds-badge-color: var(--sgds-warning-text-emphasis);
+  --sgds-badge-background-color: var(--sgds-warning-bg-subtle);
+  --sgds-badge-border-color: var(--sgds-warning-border-subtle);
 }
 :host([variant="danger"][outlined]) {
-  --badge-color: var(--sgds-danger-text-emphasis);
-  --badge-background-color: var(--sgds-danger-bg-subtle);
-  --badge-border-color: var(--sgds-danger-border-subtle);
+  --sgds-badge-color: var(--sgds-danger-text-emphasis);
+  --sgds-badge-background-color: var(--sgds-danger-bg-subtle);
+  --sgds-badge-border-color: var(--sgds-danger-border-subtle);
 }
 :host([variant="success"][outlined]) {
-  --badge-color: var(--sgds-success-text-emphasis);
-  --badge-background-color: var(--sgds-success-bg-subtle);
-  --badge-border-color: var(--sgds-success-border-subtle);
+  --sgds-badge-color: var(--sgds-success-text-emphasis);
+  --sgds-badge-background-color: var(--sgds-success-bg-subtle);
+  --sgds-badge-border-color: var(--sgds-success-border-subtle);
 }
 :host([variant="info"][outlined]) {
-  --badge-color: var(--sgds-info-text-emphasis);
-  --badge-background-color: var(--sgds-info-bg-subtle);
-  --badge-border-color: var(--sgds-info-border-subtle);
+  --sgds-badge-color: var(--sgds-info-text-emphasis);
+  --sgds-badge-background-color: var(--sgds-info-bg-subtle);
+  --sgds-badge-border-color: var(--sgds-info-border-subtle);
 }
 :host([variant="light"][outlined]) {
-  --badge-color: var(--sgds-light-text-emphasis);
-  --badge-background-color: var(--sgds-light-bg-subtle);
-  --badge-border-color: var(--sgds-light-border-subtle);
+  --sgds-badge-color: var(--sgds-light-text-emphasis);
+  --sgds-badge-background-color: var(--sgds-light-bg-subtle);
+  --sgds-badge-border-color: var(--sgds-light-border-subtle);
 }
 :host([variant="dark"][outlined]) {
-  --badge-color: var(--sgds-dark-text-emphasis);
-  --badge-background-color: var(--sgds-dark-bg-subtle);
-  --badge-border-color: var(--sgds-dark-border-subtle);
+  --sgds-badge-color: var(--sgds-dark-text-emphasis);
+  --sgds-badge-background-color: var(--sgds-dark-bg-subtle);
+  --sgds-badge-border-color: var(--sgds-dark-border-subtle);
 }
 
 .badge {
-  background-color: var(--badge-background-color);
-  border: 1px solid var(--badge-border-color);
-  border-radius: var(--badge-border-radius);
-  color: var(--badge-color);
+  background-color: var(--sgds-badge-background-color);
+  border: 1px solid var(--sgds-badge-border-color);
+  border-radius: var(--sgds-badge-border-radius);
+  color: var(--sgds-badge-color);
   display: inline-block;
-  font-size: var(--badge-font-size);
-  font-weight: var(--badge-font-weight);
-  line-height: var(--badge-line-height);
-  padding: var(--badge-padding-y) var(--badge-padding-x);
+  font-size: var(--sgds-badge-font-size);
+  font-weight: var(--sgds-badge-font-weight);
+  line-height: var(--sgds-badge-line-height);
+  padding: var(--sgds-badge-padding-y) var(--sgds-badge-padding-x);
   text-align: center;
   vertical-align: baseline;
   white-space: nowrap;
