--- a/src/components/Breadcrumb/breadcrumb-item.css
+++ b/src/components/Breadcrumb/breadcrumb-item.css
@@ -1,16 +1,16 @@
 @import "../../styles/anchor.css";
 
 :host {
-  --breadcrumb-item-padding-x: 1rem;
-  --breadcrumb-item-active-color: ;
-  --breadcrumb-item-active-font-weight: bold;
+  --sgds-breadcrumb-item-padding-x: 1rem;
+  --sgds-breadcrumb-item-active-color: ;
+  --sgds-breadcrumb-item-active-font-weight: bold;
 
-  font-size: var(--breadcrumb-font-size);
+  font-size: var(--sgds-breadcrumb-font-size);
 }
 slot[name="separator"]::slotted(*) {
-  padding-left: var(--breadcrumb-item-padding-x);
-  padding-right: var(--breadcrumb-item-padding-x);
-  color: var(--breadcrumb-separator-color)
+  padding-left: var(--sgds-breadcrumb-item-padding-x);
+  padding-right: var(--sgds-breadcrumb-item-padding-x);
+  color: var(--sgds-breadcrumb-separator-color)
 }
 
 :host(:last-of-type) .breadcrumb-item__separator {
@@ -18,6 +18,6 @@ slot[name="separator"]::slotted(*) {
 }
 
 .breadcrumb-item.active {
-  color: var(--breadcrumb-item-active-color);
-  font-weight: var(--breadcrumb-item-active-font-weight);
+  color: var(--sgds-breadcrumb-item-active-color);
+  font-weight: var(--sgds-breadcrumb-item-active-font-weight);
 }
