--- a/src/components/Mainnav/mainnav-item.css
+++ b/src/components/Mainnav/mainnav-item.css
@@ -1,8 +1,8 @@
 :host {
-  --mainnav-item-color: var(--mainnav-color);
-  --mainnav-item-theme-color: var(--mainnav-theme-color, var(--sgds-primary));
-  --mainnav-item-border-bottom-width: 0.125rem;
-  --mainnav-item-disabled-opacity: var(--mainnav-disabled-opacity, 0.5);
+  --sgds-mainnav-item-color: var(--sgds-mainnav-color);
+  --sgds-mainnav-item-theme-color: var(--sgds-mainnav-theme-color, var(--sgds-primary));
+  --sgds-mainnav-item-border-bottom-width: 0.125rem;
+  --sgds-mainnav-item-disabled-opacity: var(--sgds-mainnav-disabled-opacity, 0.5);
 }
 li {
   height: 100%;
@@ -10,16 +10,16 @@ li {
 a.nav-link {
   display: flex;
   cursor: pointer;
-  color: var(--mainnav-item-color);
-  border-bottom: var(--mainnav-item-border-bottom-width) solid transparent;
+  color: var(--sgds-mainnav-item-color);
+  border-bottom: var(--sgds-mainnav-item-border-bottom-width) solid transparent;
   min-height: 100%;
   align-items: center;
   padding: 0;
   text-decoration: none;
   &.active,
   &:hover {
-    color: var(--mainnav-item-theme-color);
-    border-color: var(--mainnav-item-theme-color);
+    color: var(--sgds-mainnav-item-theme-color);
+    border-color: var(--sgds-mainnav-item-theme-color);
   }
   &:focus-visible {
     box-shadow: 0 0 0 0.25rem rgba(89, 66, 219, 0.25);
@@ -30,5 +30,5 @@ a.nav-link {
 .nav-link.disabled {
   cursor: default;
   pointer-events: none;
-  opacity: var(--mainnav-item-disabled-opacity);
+  opacity: var(--sgds-mainnav-item-disabled-opacity);
 }
