--- a/src/components/Accordion/accordion-item.css
+++ b/src/components/Accordion/accordion-item.css
@@ -1,39 +1,39 @@
   :host {
-    --accordion-item-padding-y: 1rem;
-    --accordion-item-padding-x: 1.5rem;
-    --accordion-item-border-radius: var(--sgds-border-radius, 0.3125rem);
-    --accordion-item-font-weight: 700;
-    --accordion-item-line-height: 2rem;
+    /* RENAME in 2.0.0 */
+    --sgds-accordion-item-padding-y: 1rem;
+    --sgds-accordion-item-padding-x: 1.5rem;
+    --sgds-accordion-item-border-radius: var(--sgds-border-radius, 0.3125rem);
+    --sgds-accordion-item-font-weight: 700;
+    --sgds-accordion-item-line-height: 2rem;
     /** NEW in 2.0.0 */
-    --accordion-item-button-color: var(--sgds-body-color);
-    --accordion-item-button-border-radius: calc(var(--sgds-border-radius) - var(--sgds-border-width));
-    --accordion-item-button-bg: var(--accordion-bg);
-    --accordion-item-button-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='var(--sgds-body-color)'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
-    --accordion-item-button-icon-width: 1.25rem;
-    --accordion-item-button-icon-transform: rotate(-180deg);
-    --accordion-item-button-icon-transition: transform 0.2s ease-in-out;
-    /* --accordion-item-button-active-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='var(--sgds-primary-text-emphasis)'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E"); */
-    --accordion-item-button-focus-border-color: #90b5ff;
-    --accordion-item-button-focus-box-shadow: 0 0 0 0.25rem rgba(90, 66, 192, 0.25);
-    --accordion-item-content-color: var(--sgds-body-color);
+    --sgds-accordion-item-button-color: var(--sgds-body-color);
+    --sgds-accordion-item-button-border-radius: calc(var(--sgds-border-radius) - var(--sgds-border-width));
+    --sgds-accordion-item-button-bg: var(--sgds-accordion-bg);
+    --sgds-accordion-item-button-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='var(--sgds-body-color)'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+    --sgds-accordion-item-button-icon-width: 1.25rem;
+    --sgds-accordion-item-button-icon-transform: rotate(-180deg);
+    --sgds-accordion-item-button-icon-transition: transform 0.2s ease-in-out;
+    --sgds-accordion-item-button-focus-border-color: #90b5ff;
+    --sgds-accordion-item-button-focus-box-shadow: 0 0 0 0.25rem rgba(90, 66, 192, 0.25);
+    --sgds-accordion-item-content-color: var(--sgds-body-color);
   }
   .accordion-button {
     align-items: center;
-    background-color: var(--accordion-item-button-bg);
+    background-color: var(--sgds-accordion-item-button-bg);
     border: 0;
     border-radius: 0;
-    color: var(--accordion-item-button-color);
+    color: var(--sgds-accordion-item-button-color);
     display: flex;
     font-size: 1rem;
     overflow-anchor: none;
-    padding: var(--accordion-item-padding-y) var(--accordion-item-padding-x);
+    padding: var(--sgds-accordion-item-padding-y) var(--sgds-accordion-item-padding-x);
     position: relative;
     text-align: left;
-    transition: var(--accordion-transition);
+    transition: var(--sgds-accordion-transition);
     width: 100%;
   }
   .accordion-button.collapsed {
-    border-radius: var(--accordion-item-button-border-radius);
+    border-radius: var(--sgds-accordion-item-button-border-radius);
   }
   @media (prefers-reduced-motion: reduce) {
     .accordion-button {
@@ -41,24 +41,23 @@
     }
   }
   .accordion-button:not(.collapsed) {
-    background-color: var(--accordion-active-bg);
-    box-shadow: inset 0 calc(var(--accordion-border-width) * -1) 0 var(--accordion-border-color);
-    color: var(--accordion-active-color);
+    background-color: var(--sgds-accordion-active-bg);
+    box-shadow: inset 0 calc(var(--sgds-accordion-border-width) * -1) 0 var(--sgds-accordion-border-color);
+    color: var(--sgds-accordion-active-color);
   }
   .accordion-button:not(.collapsed):after {
-    /* background-image: var(--accordion-item-button-active-icon); */
-    transform: var(--accordion-item-button-icon-transform);
+    transform: var(--sgds-accordion-item-button-icon-transform);
   }
   .accordion-button:after {
-    background-image: var(--accordion-item-button-icon);
+    background-image: var(--sgds-accordion-item-button-icon);
     background-repeat: no-repeat;
-    background-size: var(--accordion-item-button-icon-width);
+    background-size: var(--sgds-accordion-item-button-icon-width);
     content: "";
     flex-shrink: 0;
-    height: var(--accordion-item-button-icon-width);
+    height: var(--sgds-accordion-item-button-icon-width);
     margin-left: auto;
-    transition: var(--accordion-item-button-icon-transition);
-    width: var(--accordion-item-button-icon-width);
+    transition: var(--sgds-accordion-item-button-icon-transition);
+    width: var(--sgds-accordion-item-button-icon-width);
   }
   @media (prefers-reduced-motion: reduce) {
     .accordion-button:after {
@@ -69,14 +68,14 @@
     z-index: 2;
   }
   .accordion-button:focus {
-    border-color: var(--accordion-item-button-focus-border-color);
-    box-shadow: var(--accordion-item-button-focus-box-shadow);
+    border-color: var(--sgds-accordion-item-button-focus-border-color);
+    box-shadow: var(--sgds-accordion-item-button-focus-box-shadow);
     outline: 0;
     z-index: 3;
   }
   /* .accordion-item:last-of-type .accordion-collapse {
-    border-bottom-left-radius: var(--accordion-border-radius);
-    border-bottom-right-radius: var(--accordion-border-radius);
+    border-bottom-left-radius: var(--sgds-accordion-border-radius);
+    border-bottom-right-radius: var(--sgds-accordion-border-radius);
   } */
 
   /*
@@ -99,41 +98,41 @@
     border-radius: 0;
   }
   [data-bs-theme="dark"] .accordion-button:after {
-    --accordion-item-button-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23D2D2D2'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
-    --accordion-item-button-active-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23D2D2D2'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+    --sgds-accordion-item-button-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23D2D2D2'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+    --sgds-accordion-item-button-active-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23D2D2D2'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
   } */
   .accordion-item {
-    background-color: var(--accordion-bg);
-    border: var(--accordion-border-width) solid var(--accordion-border-color);
-    color: var(--accordion-item-content-color);
-    border-radius: var(--accordion-item-border-radius) var(--accordion-item-border-radius);
+    background-color: var(--sgds-accordion-bg);
+    border: var(--sgds-accordion-border-width) solid var(--sgds-accordion-border-color);
+    color: var(--sgds-accordion-item-content-color);
+    border-radius: var(--sgds-accordion-item-border-radius) var(--sgds-accordion-item-border-radius);
   }
   /* .accordion-item:first-of-type .accordion-button {
-    border-top-left-radius: var(--accordion-item-border-radius);
-    border-top-right-radius: var(--accordion-item-border-radius);
+    border-top-left-radius: var(--sgds-accordion-item-border-radius);
+    border-top-right-radius: var(--sgds-accordion-item-border-radius);
   } */
 
   .accordion-body {
     padding: 0;
-    line-height: var(--accordion-item-line-height);
+    line-height: var(--sgds-accordion-item-line-height);
     overflow: hidden;
   }
   .accordion-content {
     display: block;
-    padding: 0 var(--accordion-item-padding-x) var(--accordion-item-padding-y);
+    padding: 0 var(--sgds-accordion-item-padding-x) var(--sgds-accordion-item-padding-y);
   }
   .accordion-button {
-    line-height: var(--accordion-item-line-height);
+    line-height: var(--sgds-accordion-item-line-height);
   }
   .accordion-button:not(.collapsed) {
-    font-weight: var(--accordion-item-font-weight);
+    font-weight: var(--sgds-accordion-item-font-weight);
     box-shadow: none;
   }
   :host([first-of-type]) .accordion-item {
-    border-radius: var(--accordion-item-border-radius) var(--accordion-item-border-radius) 0 0;
+    border-radius: var(--sgds-accordion-item-border-radius) var(--sgds-accordion-item-border-radius) 0 0;
     .accordion-button {
-      border-top-left-radius: var(--accordion-item-button-border-radius);
-      border-top-right-radius: var(--accordion-item-button-border-radius);
+      border-top-left-radius: var(--sgds-accordion-item-button-border-radius);
+      border-top-right-radius: var(--sgds-accordion-item-button-border-radius);
     }
   }
   :host([nth-of-type]) .accordion-item {
@@ -145,11 +144,11 @@
     }
   }
   :host([last-of-type]) .accordion-item {
-    border-radius: 0 0 var(--accordion-item-border-radius) var(--accordion-item-border-radius);
+    border-radius: 0 0 var(--sgds-accordion-item-border-radius) var(--sgds-accordion-item-border-radius);
     border-top: 0;
     .accordion-button.collapsed {
-      border-bottom-left-radius: var(--accordion-item-button-border-radius);
-      border-bottom-right-radius: var(--accordion-item-button-border-radius);
+      border-bottom-left-radius: var(--sgds-accordion-item-button-border-radius);
+      border-bottom-right-radius: var(--sgds-accordion-item-button-border-radius);
     }
   }
 
